css/styles.css
.navbar{
    margin-bottom: 0;
}

.navbar-inverse{
    background-color: #1b1b1b;
}

.navbar .container-fluid{
    width: 65%;
    padding-top: 1em;
    padding-bottom: 1em;
}

.navbar-nav>li>a {
    padding-left: 35px;
}

html, body{
    height: 100%;
    background-color: #e6e6e6;
}

#banner{
    width: 100%;
    height: 100%;
    background-image: url("../img/banner.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    background-attachment: fixed;
    position: relative;
    margin-top: -80px;
    z-index: 2;
}

.bannercaption{
    top: 40%;
    margin: 0 auto;
    text-align: center;
}

.headers{
    text-align: center;
    margin-bottom: 7.5%;
}

.headerwork{
    margin-top: 15%;
}

.workrows{
    margin-bottom: 4%;
}

.headerabout{
    margin-top: 11%;
}

/* Typography */

.navbar-inverse .navbar-nav>li>a {
    color: #f2f2f2;
    font-family: 'adamcg', sans-serif;
}

@font-face {
    font-family: 'adamcg';
    src: url('custom_font/adam.cg_pro-webfont.eot');
    src: url('custom_font/adam.cg_pro-webfont.eot?#iefix') format('embedded-opentype'),
         url('custom_font/adam.cg_pro-webfont.woff2') format('woff2'),
         url('custom_font/adam.cg_pro-webfont.woff') format('woff'),
         url('custom_font/adam.cg_pro-webfont.ttf') format('truetype'),
         url('custom_font/adam.cg_pro-webfont.svg#adam.cg_proregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

h2{
    font-family: 'adamcg', sans-serif;
    font-size: 2.5em;
    color: #333;
    letter-spacing: 0.1em;
}

/* Media Queries */

@media only screen and (min-width: 1025px) and (max-width: 1445px) and (-webkit-min-device-pixel-ratio: 1) {
    .navbar .container-fluid{
    width: 75%;
    }

}


@media only screen and (min-width: 769px) and (max-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
    .navbar .container-fluid{
    width: 90%;
    }

}


@media only screen and (max-width: 768px){
    .navbar .container-fluid{
    width: 100%;
    padding-top: 0;
    padding-bottom: 0;
    }
    .navbar{
        border: none;
    }
    .container-fluid{
        padding-top: 0;
        padding-bottom: 0;
    }    
    .navbar-toggle {
        margin-top: 22px;
    }
    .navbar-brand {
        padding: 30px 15px;
        height: 80px;
    }
    .navbar-nav{
        margin: 0;
    }
    .navbar-collapse.in{
        background-color: red;
    }
    .navbar-collapse{
        padding-right: 0;
        padding-left: 0;
    }
    .nav>li{
        padding: 10px;
        border-bottom: 2px solid black;
        text-align: center;
    }
    .navbar-nav>li>a {
        padding-left: 0;
    }

    .headerwork{
        margin-top: 25%;
    }

    .headerabout{
    margin-top: 21%;
}

}

